# TestingNinja

./: CMakeLists.txt  main.cpp
Boost_tests/: CMakeLists.txt  boost_test_1.cpp  boost_test_2.cpp  foo_test.cpp
Catch_tests/: CMakeLists.txt  foo_test.cpp
Doctest_tests/: CMakeLists.txt  foo_test.cpp
Google_benchmark/: CMakeLists.txt  foo.cpp
Gtest_tests/: CMakeLists.txt  foo_test.cpp
docs/: README.md
